buildscript {
	ext {
		springBootVersion = '2.1.2.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

plugins {
  id "com.github.spotbugs" version "1.6.10"
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'de.trawizardsOfJava'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
	mavenCentral()
}

dependencies {
	compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.3.0'
	compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.1.2.RELEASE'
	compile('org.projectlombok:lombok')
	annotationProcessor('org.projectlombok:lombok')
	implementation('org.springframework.boot:spring-boot-starter-security')
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.3.0'
	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'mysql:mysql-connector-java'
	testCompile group: 'com.h2database', name: 'h2', version:'1.4.197'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation('org.springframework.security:spring-security-test')
}
